<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".peresentation.startApp.selectLanguage.SelectLanguageFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/logoAndTitle"
        android:orientation="vertical"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/nerway_full_logo"
            android:layout_marginHorizontal="54dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="صوت النرويج بالعربية"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_secondary"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:fontFamily="@font/rubik_medium" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/languageSelector"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/norwayLanguage"
            android:layout_marginHorizontal="4dp"
            android:text="@string/norsk"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ArabicLanguage"
            android:layout_marginHorizontal="4dp"
            android:text="@string/arabic"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:id="@+id/EnglishLanguage"
            android:text="@string/english"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>